--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "swagger-ui-express": "^4.1.4",
     "uuid": "^3.4.0",
+    "winston": "^3.3.3",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
