--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-errors": "^1.8.0",
+    "http-status-codes": "^2.1.4",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^4.1.4",
     "uuid": "^3.4.0",
