--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "http-status-codes": "^2.1.4",
+    "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^4.1.4",
     "uuid": "^3.4.0",
