--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^4.1.4",
